# QicQacQoe

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  backend.py  main.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
qicqacqoe/: __init__.py  __main__.py  backend.py  game.py  rules.py
tests/: test_backend.py  test_game.py  test_rules.py
